--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,3 @@
-body {
-  margin: 0px;
-  background-color: #EADDC4;
-}
-
-.isotipo img {
-  max-width: 120px;
-  max-height: 110px;
-}
-
-.logotipo img {
-  max-width: 450px;
-  max-height: 55px;
-}
-
-.logotipo{
-  margin-left: 20%;
-}
-
 .menu a {
   padding: 5px;
   font-family: "Century Gothic";
@@ -26,55 +7,53 @@ body {
   
 }
 
-.menu a:active{
-  font-weight: bold;
+.header .isotipo img{
+  max-width: 100px;
+  max-height: 80px;
+  background-color: transparent;
+  margin-left: 10px;
+  padding-bottom: 5px;
 }
 
+.header .logotipo  img{
+  max-width: 200px;
+  max-height: 200px;
+  margin-top: 15px;
 
-.linea {
-  height: 1px;
-  width: 1800px;
-  background-color: #573c14;
-  margin-left: 110px;
-  align-self: center;
 }
 
-.flex-home {
-  margin: 0px 40px 0px 40px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between;
+.header{
+  height: 90px;
+  background-color: transparent;
+  position: absolute;
+ 
 }
 
-.flex-home > div {
-  align-self: center;
+.header a{
+  padding: 5px;
+  font-family: "Century Gothic";
+  font-size: 18px;
+  color: #573c14;
+  text-decoration: none;
+  margin: 10px 10px 0px 0px;
+
 }
 
-.flex-home {
-  margin: 0px 40px 0px 40px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between;
+.home img{
+  width: 100%;
 }
 
-.home {
-  background-image: url('../img/nomad.jpg');
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-top: 0px;
-  height: 950px;
+.home{
   text-align: center;
+  margin-bottom: 50px;
 }
 
-.home::before{
-  content: '';
-  opacity: 80%;
+.textohome{
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-
 
 .home .boton{
   color:black;
@@ -85,7 +64,6 @@ body {
   color:#573C14;
   font-family: 'Century Gothic', sans-serif;
 }
-
 
 .boton{
   color:white;
