--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,13 @@
+html{
+  background-color: #EADDC4;
+}
+
 .menu a {
   padding: 5px;
   font-family: "Century Gothic";
   font-size: 22px;
   color: #573c14;
   text-decoration: none;
-  
 }
 
 .header .isotipo img{
@@ -19,14 +22,12 @@
   max-width: 200px;
   max-height: 200px;
   margin-top: 15px;
-
 }
 
 .header{
   height: 90px;
   background-color: transparent;
   position: absolute;
- 
 }
 
 .header a{
@@ -36,7 +37,6 @@
   color: #573c14;
   text-decoration: none;
   margin: 10px 10px 0px 0px;
-
 }
 
 .home img{
@@ -45,7 +45,7 @@
 
 .home{
   text-align: center;
-  margin-bottom: 50px;
+  margin: 0px;
 }
 
 .textohome{
@@ -65,31 +65,22 @@
   font-family: 'Century Gothic', sans-serif;
 }
 
-.boton{
-  color:white;
-  font-family: 'Century Gothic', sans-serif;
-  text-decoration: none;
-  text-align: center;
-  width: 150px;
-  height: 40px;
-  font-size: 16px;
-}
-
-.boton:link{
+.botonhome{
+  color:#573C14;
   background-color: #EADDC4;
   width: 100px;
   height: 20px;
   padding: 10px 20px;
   text-decoration: none;
   border-radius: 5px;
+  font-family: 'Century Gothic', sans-serif;
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
 }
 
 .marron{
   background-color: #A67225;
-  width: 100px;
-  height: 20px;
-  text-decoration: none;
-  border-radius: 5px;
   color:white;
 }
 
@@ -98,96 +89,39 @@
   max-height: 450px;
 }
 
-.flex-home2 {
-  margin-top: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.flex-home2 h1{
-  font-family: "Century Gothic";
-  font-size: 44px;
-  font-weight: bold;
-  color: #573c14;
-  text-align: left;
-}
-
-.flex-home2 h2{
-  font-family: "Century Gothic";
-  font-size: 24px;
-  font-weight: normal;
-  color: #573c14;
-  text-align: left;
-}
-
-.flex-home2 p{
-  font-family: "Century Gothic";
-  font-size: 16px;
-  font-weight: normal;
-  color: #573c14;
-  text-align: left;
-}
-
 .home-body h2{
   margin-top: 60px;
-  font-size: 40px;
+  margin-bottom: 0px;
+  margin-left: 18px;
+  margin-right: 18px;
+  font-size: 36px;
   color:#573C14;
   font-family: 'Century Gothic', sans-serif;
+}
+
+.home-body h1{
+  color:#573C14;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-family: 'Verdana Pro Black', sans-serif;
+  font-size: 46px;
+  font-weight: normal;
 }
 
 .home-body p{
   color:#573C14;
   font-family: 'Century Gothic', sans-serif;
   font-size: 24px;
+  margin-top: 5px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-.home-body h1{
-  color:#573C14;
-  margin: 0px;
-  font-family: 'Verdana Pro Black', sans-serif;
-  font-size: 60px;
-  font-weight: normal;
+.home-body a{
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
-.producto img{
-  width: 300px;
-  height: 200px;
-}
 
-.home-productos h1{
-  color:#573C14;
-  margin-bottom: 20px;
-  font-family: 'Verdana Pro Black', sans-serif;
-  font-size: 40px;
-  font-weight: normal;
-  text-align: center;
-}
-
-.flex-productos {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.flex-productos img{
-  margin-bottom: 10px;
-}
-
-.botonproductos{
-  color:white;
-  font-family: 'Century Gothic', sans-serif;
-  text-decoration: none;
-  text-align: center;
-  font-weight: bold;
-  background-color: #A67225;
-  text-decoration: none;
-  border-radius: 5px;
-  color:white;
-  padding: 10px 122px;
-}
-
-.flex-productos > div {
-  width: 400px;
-  margin: 10px;
-  text-align: center;
-}
