--- a/css/descubri.css
+++ b/css/descubri.css
@@ -1,47 +1,4 @@
-.menu a {
-    padding: 5px;
-    font-family: "Century Gothic";
-    font-size: 22px;
-    color: #573c14;
-    text-decoration: none;
-  }
-  
-  .header .isotipo img{
-  
-    max-width: 100px;
-    max-height: 80px;
-    background-color: transparent;
-    margin-left: 20px;
-    padding-bottom: 5px;
-  }
-  
-  .header .logotipo  img{
-    max-width: 200px;
-    max-height: 200px;
-    margin-top: 15px;
-  }
-  
-  .header{
-    height: 90px;
-    background-color: transparent;
-    position: absolute;
-  }
-  
-  .header a{
-    font-family: 'Century Gothic';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 29px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: -0.015em;
-    color: #573C14;
-    margin-top: 30px;
-  }
-
-  .descubri h2, h1{
+ .descubri h2, h1{
     font-family: 'Verdana Pro Black', sans-serif;
     font-style: normal;
     font-weight: 900;
@@ -51,11 +8,11 @@
     color: #573C14;
   }
 
-  .descubri h1{
+ .descubri h1{
     font-size: 40px;
   }
 
-  .descubri p{
+ .descubri p{
     font-family: 'Century Gothic';
     font-style: normal;
     font-weight: 400;
@@ -68,7 +25,7 @@
     color: #573C14;
   }
   
-  .btn{
+ .btn{
     background: #A67225;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
@@ -77,11 +34,6 @@
     font-weight: 700;
     font-size: 16px;
     text-transform: none;
-  }
-
-  img{
-    width: 350px;
-    height: 250px;
   }
 
   .cordoba{
@@ -103,27 +55,7 @@
     border-bottom: 3px solid #EADDC4;
   }
 
-  .row{
-    border-top: 1px solid #573C14;
-  }
-
-  .logotipofooter{
-    margin-top: 40px;
-    margin-left: 50px;
-    width: 150px;
-    height: 35px;
+  .container .descubri{
+	margin-top: 50px;
   }
   
-  .footer a{
-    color:#573C14;
-    margin-bottom: 50px;
-    margin-right: 5px;
-  }
-  
-  .socials{
-    margin-right: 50px;
-  }
-  
-  .footer .row{
-    margin-bottom: 0px; 
-  }
