--- a/css/headerfooter.css
+++ b/css/headerfooter.css
@@ -34,14 +34,17 @@ html{
   padding: 5px;
   font-family: "Century Gothic";
   font-size: 18px;
-  color: #573c14;
+  color: black;
   text-decoration: none;
   margin: 10px 10px 0px 0px;
 }
 
+.header a:hover{
+  background-color: transparent;
+}
+
 .logotipofooter{
   margin-top: 40px;
-  margin-left: 50px;
   width: 150px;
   height: 35px;
 }
@@ -50,10 +53,6 @@ html{
   color:#573C14;
   margin-bottom: 50px;
   margin-right: 5px;
-}
-
-.socials{
-  margin-right: 50px;
 }
 
 .footer .row{
