--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
+html{
+  background-color: white;
+}
+
 .home img{
   width: 100%;
 }
@@ -18,111 +22,68 @@ position: absolute;
   transform: translate(-50%, -50%);
 }
 
-.home .boton{
-  color:black;
+.textohome h1{
+  font-size: 40px;
+  font-family: "Century Gothic";
 }
 
-.home h2{
-margin-top:  5rem;
-  color:#573C14;
-  font-family: 'Century Gothic', sans-serif;
+.textohome a{
+  font-family: 'Verdana Pro Black', sans-serif;
+  background-color: #795548;
 }
 
-.botonhome{
-  color:#573C14;
-  background-color: #EADDC4;
-  width: 100px;
-  height: 20px;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
-  font-family: 'Century Gothic', sans-serif;
-  text-decoration: none;
-  text-align: center;
-  font-size: 16px;
-}
-
-.marron{
-  background-color: #A67225;
-  color:white;
-}
-
-.guias img{
-  max-width: 800px;
-  max-height: 450px;
-}
-
-.home-body h2{
-  margin-top: 60px;
-  margin-bottom: 0px;
-  margin-left: 18px;
-  margin-right: 18px;
-  color:#573C14;
-  font-family: 'Century Gothic', sans-serif;
+.textohome a:hover{
+  color: black;
+  background-color: antiquewhite;
 }
 
 .home-body h1{
-  color:#573C14;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: 15px;
-  margin-right: 15px;
+  font-size: 32px;
   font-family: 'Verdana Pro Black', sans-serif;
-  font-weight: normal;
-}
-
-.home-body p{
-  color:#573C14;
-  font-family: 'Century Gothic', sans-serif;
-  margin-top: 5px;
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-.home-body a{
-  margin-right: 20px;
-  margin-left: 20px;
-}
-
-.productos img{
-  max-height: 250px;
-  max-width: 350px;
-  min-height: 200px;
-  min-width: 300px;
-}
-
-.productos h1{
-  color:#573C14;
   margin-top: 0px;
-  margin-bottom: 40px;
-  font-family: 'Verdana Pro Black', sans-serif;
-  font-size: 36px;
-  font-weight: normal;
-}
-
-.productos .row{
   margin-bottom: 10px;
 }
 
-.botonproductos{
-  background-color: #A67225;
-  color:white;
-  width: 100px;
-  height: 20px;
-  padding: 0.5rem;
-  text-decoration: none;
-  border-radius: 5px;
-  font-family: 'Century Gothic', sans-serif;
-  text-decoration: none;
-  text-align: center;
-  font-size: 16px;
+.home-body h2{
+  font-size: 32px;
+  font-family: "Century Gothic";
+  margin-bottom: 0px;
 }
 
-.barra{
-  border-top: 1px solid #573C14;
-  width: 1350px;
-height: 0px;
-left: 400px;
-top: 36px;
+.home-body p{
+  font-size: 24px;
+  font-family: "Century Gothic";
+  margin-top: 0px;
 }
 
+.home-body a{
+  font-family: 'Verdana Pro Black', sans-serif;
+  background-color: #795548;
+}
+
+.home-body a:hover{
+  color: black;
+  background-color: antiquewhite;
+}
+
+.home-productos a{
+  font-family: 'Verdana Pro Black', sans-serif;
+  padding: 0px 6rem;
+  margin-bottom: 15px;
+  background-color: #795548;
+}
+
+.home-productos a:hover{
+  color: black;
+  background-color: antiquewhite;
+}
+
+.home-productos h1{
+  font-size: 28px;
+  font-family: 'Verdana Pro Black', sans-serif;
+}
+
+.home-productos img{
+  max-height: 200px;
+  margin: 20px 0px ;
+}
