--- a/css/descubri.css
+++ b/css/descubri.css
@@ -10,6 +10,7 @@
 
  .descubri h1{
     font-size: 40px;
+    margin: 0;
   }
 
  .descubri p{
@@ -21,19 +22,7 @@
     display: flex;
     align-items: center;
     letter-spacing: -0.015em;
-
     color: #573C14;
-  }
-  
- .btn{
-    background: #A67225;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    text-transform: none;
   }
 
   .cordoba{
@@ -56,6 +45,35 @@
   }
 
   .container .descubri{
-	margin-top: 50px;
+	  margin-top: 50px;
   }
   
+  .desc a{
+    padding: 0px 2rem;
+    font-family: 'Verdana Pro Black', sans-serif;
+    background-color: #795548;
+    margin-bottom: 15px;
+  }
+
+  .desc a:hover{
+    color: black;
+    background-color: antiquewhite;
+  }
+
+  .divider{
+    background-color: #795548!important;
+  }
+
+  span{
+    font-family: 'Century Gothic';
+    font-style: normal; 
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: -0.015em;
+    color: #000000;
+  }
+
+  .info{
+    padding-right: 3em!important;
+  }
