--- a/css/descubri.css
+++ b/css/descubri.css
@@ -5,7 +5,7 @@
     font-size: 30px;
     line-height: 36px;  
     letter-spacing: -0.015em;
-    color: #573C14;
+    color: #795548;
   }
 
  .descubri h1{
@@ -22,13 +22,15 @@
     display: flex;
     align-items: center;
     letter-spacing: -0.015em;
-    color: #573C14;
+    color: black;
   }
 
   .cordoba{
     margin-top: 2em;
-    width: 100%!important;
-    height: 100%!important;
+  }
+
+  .carousel{
+    height: 350px!important;
   }
 
   .card-title{
