--- a/css/home.css
+++ b/css/home.css
@@ -66,24 +66,75 @@ position: absolute;
   background-color: antiquewhite;
 }
 
-.home-productos a{
-  font-family: 'Verdana Pro Black', sans-serif;
-  padding: 0px 6rem;
-  margin-bottom: 15px;
-  background-color: #795548;
+.carousel {
+  height: 300px !important;
 }
 
-.home-productos a:hover{
+.carousel-item img{
+  height: 82%;
+  margin-bottom: 6px;
+}
+
+.carousel-item {
+  height: 85%!important;
+  width: 20%!important; 
+  position: absolute;
+}
+
+.carousel a:hover{
   color: black;
   background-color: antiquewhite;
 }
 
-.home-productos h1{
-  font-size: 28px;
+.carousel a{
+  color: white;
   font-family: 'Verdana Pro Black', sans-serif;
+  background-color: #795548;
 }
 
-.home-productos img{
-  max-height: 200px;
-  margin: 20px 0px ;
+.carousel .carousel-item h1{
+    text-align: center;
+}
+
+.carousel .carousel-item h1{
+  position: absolute;
+  bottom: 0;
+}
+
+.modal { 
+  width: 30% !important ; 
+  height: 55% !important ; 
+}
+
+.logotipomodal{
+  width:400px;
+  padding-left: 25%;
+  margin-bottom: 2rem;
+}
+
+.modal a {
+  width: 22rem;
+  margin-top: 0.8rem;
+  color: white;
+  font-family: 'Verdana Pro Black', sans-serif;
+  background-color: #795548;
+}
+
+.modal a:hover {
+  color: black;
+  background-color: antiquewhite;
+}
+
+.modal h4{
+  font-size: 24px;
+  margin-bottom: 2rem;
+}
+
+.modal p{
+  margin-top: 5rem;
+}
+
+.row .divider {
+  margin-top: 2rem;
+  background-color: #79554880;
 }
