--- a/css/guias.css
+++ b/css/guias.css
@@ -3,7 +3,7 @@ html{
 }
 
 .guias h1{
-    font-size: 28px;
+    font-size: 22px;
     font-family: 'Verdana Pro Black', sans-serif;
     text-align: left;
 }
@@ -11,23 +11,30 @@ html{
 .buscador h1{
     font-size: 24px;
     font-family: 'Verdana Pro Black', sans-serif;
-
-}
-
-.guias img{
-    max-height: 200px;
-    margin-bottom: 5px;
-    margin-top: 10px;
-}
-
-.guias a{
-    padding: 0px 7rem;
-    font-family: 'Verdana Pro Black', sans-serif;
-    background-color: #795548;
-    margin-bottom: 15px;
 }
 
 .guias a:hover{
     color: black;
     background-color: antiquewhite;
   }
+
+.guias .row{
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.row .divider {
+    margin-top: 4.8rem;
+    background-color: #79554880;
+}
+
+.card-title{
+    padding-bottom: 10px!important;
+    font-size: 28px;
+    font-family: "Century Gothic";
+    color: #FFFFFF;
+  }
+
+.card-image{
+    border-bottom: 3px solid #EADDC4;
+}
