--- a/css/guias.css
+++ b/css/guias.css
@@ -38,3 +38,21 @@ html{
 .card-image{
     border-bottom: 3px solid #EADDC4;
 }
+
+.dropdown-content li>a, .dropdown-content li>span {
+    color: #795548;
+}
+
+.select-wrapper input.select-dropdown {
+    border-bottom: 1px solid #795548;
+}
+
+.select-wrapper input.select-dropdown:focus {
+    border-bottom: 1px solid #795548;
+}
+
+.select-wrapper input.select-dropdown{
+   position:  relative;
+}
+
+
