--- a/css/descubri.css
+++ b/css/descubri.css
@@ -15,7 +15,7 @@
 
  .descubri p{
     font-family: 'Century Gothic';
-    font-size: 20px;
+    font-size: 17px;
     line-height: 25px;
     display: flex;
     align-items: center;
@@ -79,4 +79,78 @@
 
   .info{
     padding-right: 3em!important;
+  }
+
+  .modal { 
+    width: 30% !important ; 
+    height: 40% !important ; 
+  }
+
+  .modal a{
+    padding: 0!important;
+  }
+  
+  .modal a:hover {
+    background-color: grey;
+  }
+  
+  .modal h4{
+    color: #795548;
+    font-weight: 500;
+    font-size: 1.8rem;
+  }
+  
+  .modal p, label{
+    color: #795548!important;
+    font-weight: 500!important;
+    font-size: 20px!important;
+  }
+
+  .modal i{
+    padding: 0!important;
+    font-size: 65px!important;
+    background-color: antiquewhite;
+  }
+
+  .modal div{
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+  }
+
+  .modal img{
+    border-radius: 5px;
+    padding: 0!important;
+    width: 65px!important;
+    height: 65px!important;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+  } 
+
+  .modal input{
+    width: 90%!important;
+    padding-left: 10px!important;
+    margin-top: 5px!important;
+    margin-bottom: 15px!important;
+    border-radius: 5px!important;
+    background-color: antiquewhite!important;
+    border-bottom: none!important;
+    color: #795548!important;
+    font-size: 20px!important;
+    -webkit-border-radius: 5px!important;
+    -moz-border-radius: 5px!important;
+    -ms-border-radius: 5px!important;
+    -o-border-radius: 5px!important;
+}
+
+  .modal input:focus{
+    border: none;
+  }
+
+  .padding{
+    padding: 10px;
   }
