--- a/css/hotel.css
+++ b/css/hotel.css
@@ -17,6 +17,8 @@
     font-family: 'Century Gothic';
     font-size: 20px;
     color: black;
+    margin-bottom: 0;
+    margin-left: 2em;
   }
 
   h3{
@@ -96,19 +98,11 @@
   }
 
   .ubi{
-    position: absolute;
-    bottom: 28%;
-    margin-top: 0!important;
-    font-size: 20px!important;
-    display: inline-block!important;
+    margin: 10px 0px;
   }
 
-  .ubi-ofertas{
-    position: absolute;
-    top: 68%;
-    margin-top: 0!important;
-    font-size: 20px!important;
-    display: inline-block!important;
+  .ubi h2{
+    margin-top: 15px;
   }
 
   .check{
