--- a/css/tienda.css
+++ b/css/tienda.css
@@ -25,7 +25,7 @@ html{
   padding: 0px 1.8rem;
   font-family: 'Verdana Pro Black', sans-serif;
   background-color: #795548;
-  font-size: 12px;
+  font-size: 15px;
 }
 
 .botonCompras a:hover{
@@ -47,4 +47,9 @@ html{
   position:absolute;
   top: 5%!important;
   right: 5%!important;
+}
+
+.shop-icon a:hover{
+  color: black;
+  background-color: antiquewhite;
 }
