--- a/css/tienda.css
+++ b/css/tienda.css
@@ -22,10 +22,10 @@ html{
 }
 
 .botonCompras a{
-  padding: 0px 1.8rem;
+  padding: 0px 16px;
   font-family: 'Verdana Pro Black', sans-serif;
   background-color: #795548;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .botonCompras a:hover{
@@ -52,4 +52,8 @@ html{
 .shop-icon a:hover{
   color: black;
   background-color: antiquewhite;
+}
+
+.shop-nav a{
+  width: 15%!important;
 }
