--- a/css/planificador.css
+++ b/css/planificador.css
@@ -27,7 +27,6 @@ html{
   }
 
 
-
   .video-container{
     margin-top: 2rem;
 
@@ -72,6 +71,7 @@ html{
 }
 
 .avion{
-    padding-top: 6rem;
+    padding-top: 7rem;
+    padding-bottom: 3rem;
     padding-left: 0.8rem;
 }
