--- a/css/planificador.css
+++ b/css/planificador.css
@@ -1,68 +1,84 @@
 html{
     background-color: white;
-  }
+    min-height: 100%;
+    position: relative;
+}
 
-  .planificador h1{
+body{
+    margin: 0;
+    margin-bottom: 250px;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #2c3440;
+    padding-top: 10px;
+}
+  
+.planificador h1{
     font-size: 2rem;
     font-family: 'Verdana Pro Black', sans-serif;
     margin-top: 2rem;
-  }
+}
 
-  .planificador h3{
+.planificador h3{
     font-size: 1rem;
     font-family: "Century Gothic";
     margin-top: 0rem;
     margin-bottom: 0rem;
-  }
+}
 
-  .planificador h2{
+.planificador h2{
     font-size: 1.5rem;
     font-family: "Century Gothic";
-  }
+}
 
-  .planificador h4{
+.planificador h4{
     font-size: 1.2rem;
     font-family: "Century Gothic";
     padding-top: 1rem;
-  }
+}
 
 
-  .video-container{
+.video-container{
     margin-top: 2rem;
+    height: 30rem !important;
 
-  }
+}
 
-  .planificador{
+.planificador{
     margin-top: 2rem;
-  }
+}
 
-  .planificador a{
+.planificador a{
     margin-top: 2rem;
-  }
+}
 
-  .datepicker-date-display, .timepicker-digital-display{
+.datepicker-date-display, .timepicker-digital-display{
     background-color: #795548!important;
-  }
+}
 
-  .datepicker-cancel, .datepicker-done, .timepicker-close{
+.datepicker-cancel, .datepicker-done, .timepicker-close{
     color: #795548!important;
-  }
+}
 
-  .timepicker-span-hours, .timepicker-span-minutes{
+.timepicker-span-hours, .timepicker-span-minutes{
     font-family: 'Verdana Pro Black', sans-serif;
-  }
+}
 
-  .date-text{
+.date-text{
     font-family: 'Verdana Pro Black', sans-serif!important;
     font-size: 2.0rem!important;
     color: antiquewhite!important;
-  }
+}
 
-  .timepicker-plate{
+.timepicker-plate{
     background-color: antiquewhite!important;
-  }
+}
 
-  .dividervertical{
+.dividervertical{
     position:absolute;
     margin-left: 1.3rem;
     top:35%;
