--- a/css/descubri.css
+++ b/css/descubri.css
@@ -32,8 +32,8 @@
 
   .card-title{
     padding-bottom: 10px!important;
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 28px;
+    font-family: "Century Gothic";
     color: #FFFFFF;
   }
 
@@ -154,3 +154,9 @@
   .padding{
     padding: 10px;
   }
+
+  .card .card-image .card-title {
+    width: 100%;
+    background-color: #79554838;
+    padding: 5px !important;
+}
