--- a/css/tienda.css
+++ b/css/tienda.css
@@ -3,19 +3,6 @@ html{
   background-color:white;
     
   }
-   
-.col img{
-  width: 150px;
-  height: 150px;
-}
-
-.col img {
-
-  margin-top: 40px;
-  width: 150px;
-  height: 35px;
-
-}
 
 .botonCompras{
   text-align: center;
@@ -25,7 +12,7 @@ html{
   padding: 0px 16px;
   font-family: 'Verdana Pro Black', sans-serif;
   background-color: #795548;
-  font-size: 14px;
+  font-size: 0.8rem;
 }
 
 .botonCompras a:hover{
@@ -33,14 +20,9 @@ html{
   background-color: antiquewhite;
 }
 
-.home-body img{
+.tienda-body img{
   margin: 0;
   width: 100%;
-}
-
-.product{
-  position: relative;
-  padding: 20px!important;
 }
 
 .shop-icon{
@@ -49,11 +31,72 @@ html{
   right: 5%!important;
 }
 
-.shop-icon a:hover{
+.row .divider {
+  margin-top: 1.5rem;
+  background-color: #79554880;
+}
+
+ul:not(.browser-default) {
+  padding-left: 4rem !important;
+  list-style-type: none;
+}
+
+
+.tabs.tabs-transparent .tab a, .tabs.tabs-transparent .tab.disabled a, .tabs.tabs-transparent  {
+  color: black !important;
+}
+
+.tabs .tab {
+  text-transform: none !important;
+  font-size: 15px;
+}
+
+.tabs .tab a {
+  font-size: 1.1rem!important;
+}
+
+.tabs .tab a.active {
+  color: #795548!important;
+  font-weight: bold;
+}
+
+.producto{
+  position: relative;
+
+}
+
+.producto .botonCompras{
+  text-align: center;
+
+}
+
+.producto .botonCompras a{
+  padding: 0px 16px;
+  font-family: 'Verdana Pro Black', sans-serif;
+  background-color: #795548;
+  font-size: 0.9rem;
+  width: 100%!important;
+}
+
+.producto:hover .botonCompras a{
   color: black;
   background-color: antiquewhite;
 }
 
-.shop-nav a{
-  width: 15%!important;
+.btn, .btn-large, .btn-small, .btn-flat {
+  text-transform: none !important;
+}
+
+.btn-floating {
+  color: #fff;
+  background-color: #795548!important;
+}
+
+.producto .btn-floating:hover{
+  color: black!important;
+  background-color: antiquewhite!important;
+}
+
+.producto .btn-floating i:hover{
+  color: black;
 }
