--- a/css/planificador.css
+++ b/css/planificador.css
@@ -103,3 +103,26 @@ footer{
 .btn-floating:hover i{
     color: black!important;
 }
+
+
+.timepicker-canvas-bearing {
+    stroke: none;
+    fill: #795548!important;;
+}
+
+.timepicker-canvas-bg {
+  stroke: none;
+  fill: #795548!important;
+}
+
+.timepicker-canvas line {
+  stroke: #795548!important;
+}
+
+.datepicker-table td.is-today {
+  color: #795548!important;
+}
+
+.datepicker-table td.is-selected {
+  background-color: antiquewhite!important;
+}
