--- a/css/planificador.css
+++ b/css/planificador.css
@@ -124,5 +124,5 @@ footer{
 }
 
 .datepicker-table td.is-selected {
-  background-color: antiquewhite!important;
+  background-color: #795548!important;
 }
